# oop

./: .gitignore
lab-2/src/: drawing_area.py  main.py  shapes.py  window.py
lab-3/: com.chyhryn.Lab3.json  meson.build
lab-3/data/: com.chyhryn.Lab3.desktop.in  com.chyhryn.Lab3.gschema.xml  com.chyhryn.Lab3.metainfo.xml.in  com.chyhryn.Lab3.service.in  meson.build
lab-3/data/icons/: meson.build
lab-3/po/: POTFILES.in  meson.build
lab-3/src/: drawing_area.py  lab-3.gresource.xml  lab-3.in  main.py  meson.build  shape_picker.py  shapes.py  window.py
lab-3/src/gtk/: drawing-area.blp  help-overlay.blp  shape-picker.blp  style.css  window.blp
lab-5/: com.chyhryn.Lab5.json  meson.build
lab-5/data/: com.chyhryn.Lab5.desktop.in  com.chyhryn.Lab5.gschema.xml  com.chyhryn.Lab5.metainfo.xml.in  com.chyhryn.Lab5.service.in  meson.build
lab-5/data/icons/: meson.build
lab-5/po/: POTFILES.in  meson.build
lab-5/src/: drawing_area.py  lab-5.gresource.xml  lab-5.in  main.py  meson.build  shape_picker.py  shapes.py  singleton.py  table.py  window.py
lab-5/src/gtk/: shape-picker.blp  table.blp  window.blp
lab-6/lab-6/: com.chyhryn.Lab6.json  meson.build
lab-6/lab-6/data/: com.chyhryn.Lab6.desktop.in  com.chyhryn.Lab6.gschema.xml  com.chyhryn.Lab6.metainfo.xml.in  com.chyhryn.Lab6.service.in  meson.build
lab-6/lab-6/data/icons/: meson.build
lab-6/lab-6/po/: POTFILES.in  meson.build
lab-6/lab-6/src/: lab-6.gresource.xml  lab-6.in  main.py  meson.build  objects.py  window.py
lab-6/lab-6/src/gtk/: window.blp
lab-6/object-2/: com.chyhryn.Object2.json  meson.build
lab-6/object-2/data/: com.chyhryn.Object2.desktop.in  com.chyhryn.Object2.gschema.xml  com.chyhryn.Object2.metainfo.xml.in  com.chyhryn.Object2.service.in  meson.build
lab-6/object-2/data/icons/: meson.build
lab-6/object-2/po/: POTFILES.in  meson.build
lab-6/object-2/src/: dbus_interface.py  main.py  meson.build  object-2.gresource.xml  object-2.in  table.py  window.py
lab-6/object-2/src/gtk/: table.blp  window.blp
lab-6/object-3/: com.chyhryn.Object3.json  meson.build
lab-6/object-3/data/: com.chyhryn.Object3.desktop.in  com.chyhryn.Object3.gschema.xml  com.chyhryn.Object3.metainfo.xml.in  com.chyhryn.Object3.service.in  meson.build
lab-6/object-3/data/icons/: meson.build
lab-6/object-3/po/: POTFILES.in  meson.build
lab-6/object-3/src/: dbus_interface.py  main.py  meson.build  object-3.gresource.xml  object-3.in  window.py
lab-6/object-3/src/gtk/: window.blp
project/: com.chyhryn.Project.json  meson.build
project/data/: com.chyhryn.Project.desktop.in  com.chyhryn.Project.gschema.xml  com.chyhryn.Project.metainfo.xml.in  com.chyhryn.Project.service.in  meson.build
project/data/icons/: meson.build
project/po/: POTFILES.in  meson.build
project/src/: main.py  meson.build  project.gresource.xml  project.in  sign_up.py  window.py
project/src/gtk/: sign-up-dialog.blp  sign-up-page.blp  sign-up-window.blp  window.blp
